--- a/_posts/2025-05-17-Miraah.md
+++ b/_posts/2025-05-17-Miraah.md
@@ -6,20 +6,11 @@ background: '/img/vr_cables_1_pablo_dornhege_zugeschnitten-scaled-1.webp'
 ---
 
 
-## VR 
-test test test  test test testtest test testtest test testtest test testtest test testtest test testtest test test
-test test testtest test testtest test testtest test testtest test testtest test testtest test testtest test testtest test test
-test test testtest test testtest test testtest test testtest test testtest test testtest test testtest test test
+## VR
 
-test test testtest test testtest test testtest test testtest test testtest test testtest test test
-test test testtest test testtest test testtest test testtest test testtest test testtest test test
-test test testtest test testtest test testtest test testtest test testtest test testtest test testtest test test
-test test testtest test testtest test test
+VR is so awsome broooooo
 
 
+## VR for teaching Science
 
-# test
-
-test test testtest test testtest test testtest test testtest test testtest test testtest test test
-test test testtest test testtest test testtest test testtest test test
-test test testtest test testtest test testtest test testtest test test
+Yoooo VR is so awsome for teachigng Science
