--- a/_posts/2025-05-17-VR.md
+++ b/_posts/2025-05-17-VR.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: "Digital Games (GAME)"
-subtitle: "Serious Games"
-background: '/img/online-school-6956164_1280.jpg'
+title: "VR"
+subtitle: "Virtual Reality"
+background: '/img/vr_cables_1_pablo_dornhege_zugeschnitten-scaled-1.webp'
 ---
+
+
 Lorem Ipsium
 
 <div style="background-color: #f0f0f0; border-left: 4px solid #999; padding: 10px 15px; border-radius: 6px; line-height: 1.6;">
