--- a/_posts/2025-5-22-Mixed.md
+++ b/_posts/2025-5-22-Mixed.md
@@ -1,6 +1,47 @@
 ---
 layout: post
 title: "MIXED"
-subtitle: "Augmented Reality"
-background: '/img/vr_cables_1_pablo_dornhege_zugeschnitten-scaled-1.webp'
+subtitle: "Mixed Reality"
+background: '/img/xr-expo-hIz2lvAo6Po-unsplash (1).jpg'
 ---
+Lorem Ipsium
+
+<div style="background-color: #f0f0f0; border-left: 4px solid #999; padding: 10px 15px; border-radius: 6px; line-height: 1.6;">
+  <h4>Meta-Analysis at a Glance</h4>
+  <br>
+  <strong>Focus of the Study:</strong>  
+  Lorem Ipsium
+  <br>
+
+  <strong>Target Group:</strong>  
+  Lorem Ipsium
+  <br>
+
+  <strong>Average Effect Size:</strong>  
+   Lorem Ipsium 
+  <br>
+
+  <strong>Further Finding:</strong>  
+  Lorem Ipsium
+
+</div>
+<br>
+
+#### Introduction
+Lorem Ipsium
+
+#### What Is This Study About?
+Lorem Ipsium
+
+#### Key Findings
+Lorem Ipsium
+
+#### How Does GAMEs Rate as Teaching Method?
+Lorem Ipsium
+
+#### Conclusion for Teaching Practice
+Lorem Ipsium
+
+
+#### Study Example
+Lorem Ipsium
