minor content changes

--- a/_posts/2025-5-22-Ben.md
+++ b/_posts/2025-5-22-Ben.md
@@ -4,7 +4,7 @@ title: "Ben's Paper"
 subtitle: "Comparison of virtual reality and hands on activities in science education via functional near infrared spectroscopy"
 background: '/img/xr-expo-hIz2lvAo6Po-unsplash (1).jpg'
 ---
-The study by Lamb et al. (2018) investigated the cognitive and learning impacts of different instructional methods—video lectures, virtual reality (VR), serious educational games (SEGs), and hands-on activities—in teaching DNA replication. Using functional near-infrared spectroscopy (fNIRS) to measure brain activity, the researchers found that VR, SEGs, and hands-on activities elicited similar levels of cognitive engagement and learning gains, all outperforming traditional video lectures. This suggests that immersive and interactive learning environments can be as effective as, or more effective than, conventional teaching methods.
+The study by Lamb et al. (2018) investigated the cognitive and learning impacts of different instructional methods—video lectures, virtual reality (VR), serious educational games (SEGs), and hands on activities in teaching DNA replication. Using functional near infrared spectroscopy (fNIRS) to measure brain activity, the researchers found that VR, SEGs, and hands on activities elicited similar levels of cognitive engagement and learning gains, all outperforming traditional video lectures. This suggests that immersive and interactive learning environments can be as effective as, or more effective than, conventional teaching methods.
 
 **Study conditions:**
 
@@ -18,14 +18,14 @@ The study by Lamb et al. (2018) investigated the cognitive and learning impacts 
 
   - Virtual reality (VR) environment simulating DNA replication.
 
-  - Hands-no activity.
+  - Hands no activity.
 
 - **Measurement Tools:**
 
-  - Functional near-infrared spectroscopy (fNIRS) to assess hemodynamic responses (cognitive engagement).
+  - Functional near infrared spectroscopy (fNIRS) to assess hemodynamic responses (cognitive engagement).
 
-  - Pre- and post-tests to evaluate content learning gains.
+  - Pre and post tests to evaluate content learning gains.
 
 **Conclusions:**
 
-The findings indicate that immersive and interactive instructional methods, such as VR and SEGs, can match or surpass the effectiveness of traditional hands-on activities in science education. These methods not only enhance cognitive engagement but also lead to significant learning gains, highlighting their potential as valuable tools in modern educational practices.
+The findings indicate that immersive and interactive instructional methods, such as VR and SEGs, can match or surpass the effectiveness of traditional hands on activities in science education. These methods not only enhance cognitive engagement but also lead to significant learning gains, highlighting their potential as valuable tools in modern educational practices.
