--- a/_posts/2025-5-22-Miraah.md
+++ b/_posts/2025-5-22-Miraah.md
@@ -6,13 +6,13 @@ background: '/img/online-school-6956164_1280.jpg'
 ---
 
 
-A classroom study by Chiang, Yang, and Hwang (2014) investigated the effects of an augmented reality (AR)-based mobile learning system on elementary students’ learning achievements, motivations, and cognitive load during natural science class. The study compared two learning approaches:
+A classroom study by Chiang, Yang, and Hwang (2014) investigated the effects of an augmented reality (AR) based mobile learning system on elementary students’ learning achievements, motivations, and cognitive load during natural science class. The study compared two learning approaches:
 
-- **Control Group:** Students used conventional inquiry-based mobile learning tools to explore aquatic plants in real-world environments.
+- **Control Group:** Students used conventional inquiry based mobile learning tools to explore aquatic plants in real world environments.
 
-- **Experimental Group:** Students engaged with an AR-enhanced mobile learning system that integrated real-world contexts with digital overlays during the same inquiry tasks.
+- **Experimental Group:** Students engaged with an AR enhanced mobile learning system that integrated realworld contexts with digital overlays during the same inquiry tasks.
 
-The experiment involved 57 fourth-grade students from two classes, taught by the same instructor. Both groups completed a pre-test to ensure equivalent prior knowledge, followed by a 120-minute outdoor inquiry activity. Post-tests, motivation surveys (based on Keller’s ARCS model), and cognitive load assessments were conducted.
+The experiment involved 57 fourth grade students from two classes, taught by the same instructor. Both groups completed a pre-test to ensure equivalent prior knowledge, followed by a 120 minute outdoor inquiry activity. Post-tests, motivation surveys (based on Keller’s ARCS model), and cognitive load assessments were conducted.
 
 **Key Findings:**
 - **Learning Achievement:**
