--- a/_posts/2025-5-22-Ben.md
+++ b/_posts/2025-5-22-Ben.md
@@ -29,3 +29,10 @@ The study by Lamb et al. (2018) investigated the cognitive and learning impacts 
 **Conclusions:**
 
 The findings indicate that immersive and interactive instructional methods, such as VR and SEGs, can match or surpass the effectiveness of traditional hands on activities in science education. These methods not only enhance cognitive engagement but also lead to significant learning gains, highlighting their potential as valuable tools in modern educational practices.
+
+
+**Refrence:**
+
+Lamb, R., Antonenko, P., Etopio, E., & Seccia, A. (2018). Comparison of virtual reality and hands on activities in science education via 
+functional near infrared spectroscopy. Computers & education, 124, 14–26. https://doi.org/10.1016/j.compedu.2018.05.014
+C
