--- a/_posts/2025-5-22-Miraah.md
+++ b/_posts/2025-5-22-Miraah.md
@@ -34,3 +34,12 @@ The experiment involved 57 fourth grade students from two classes, taught by the
 - **Cognitive Load:**
 
   - No significant differences were observed in mental load or effort, suggesting AR did not impose additional cognitive burden (*p* > .05).
+
+
+
+- **Refrence:**
+
+
+  Chiang, T. H., Yang, S. J., & Hwang, G. J. (2014). An augmented reality-based mobile learning system to improve students’ learning 
+achievements and motivations in natural science inquiry activities. Journal of Educational Technology & Society, 17(4), 352365. https:// www. jstor. org/ stable/ 10. 2307/ jeduc techs oci. 17.4. 352
+
